K8s/cicd/jenkins-route/jenkins-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins
  namespace: cicd
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins-demo
    app.kubernetes.io/component: automation-server
  annotations:
    description: 'HTTPRoute for Jenkins CI/CD server'
    contact: platform-team
    documentation: https://www.jenkins.io/doc/
spec:
  parentRefs:
    - name: idp-gateway
      namespace: kube-system
  hostnames:
    - "jenkins.127-0-0-1.sslip.io"
  rules:
    - backendRefs:
        - name: jenkins
          port: 8080
